# fitStake

./: .gitignore  Anchor.toml  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  rust-toolchain.toml
.cursor/plans/: fitstake_4_saat_planı_f6ccf2bc.plan.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/web/: README.md  next.config.ts  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: LanguageProvider.tsx  LanguageSwitcher.tsx  ProfileDropdown.tsx  SquatTracker.tsx  WalletProvider.tsx
apps/web/src/idl/: fitstake_vault.json
apps/web/src/lib/: fitstakeStorage.ts  i18n.ts
docs/: FAZ0_ENVIRONMENT.md  project_overview.md  solana_anchor_specs.md  vision_ai_specs.md
programs/fitstake_vault/: Cargo.toml
programs/fitstake_vault/src/: lib.rs
scripts/: faz0-verify.mjs  faz0-verify.sh
